--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: build
 
 on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'test'
+        required: true
   push:
     branches: 
       - '**'
@@ -17,7 +22,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: docker-login
-        run: echo "${DOCKERUP_PASSWORD}" | docker login -u ninotter --password-stdin
+        run: echo "${{secrets.DOCKERUP_PASSWORD}}" | docker login -u ninotter --password-stdin
       - name: set-docker-var
         run: |
           LARADOCK_HASH=9ade3bfc
