--- a/deploy/workspace/Dockerfile
+++ b/deploy/workspace/Dockerfile
@@ -1,5 +1,6 @@
 ARG LARADOCK_WORKSPACE
-FROM ${LARADOCK_WORKSPACE}
+
+FROM $LARADOCK_WORKSPACE AS builder
 
 WORKDIR /src
 COPY ./composer.json /src/
